feat: Detailed album information endpoint
